force-app/main/default/objects/nepa_process_related_agencies__c.object
<CustomObject>
    <description>Federal agencies involved in the process</description>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The federal agency involved in this permitting application process</description>
        <inlineHelpText>The federal agency involved in this permitting application process</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>nepa_permit_application_agencies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processes__c</fullName>
        <description>The NEPA application process this agency is involved in</description>
        <inlineHelpText>The NEPA application process this agency is involved in</inlineHelpText>
        <label>Process</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Related Agencies</relationshipLabel>
        <relationshipName>Process_Agency_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nepa_role__c</fullName>
        <description>What is the type of relationship this agency has to this permitting process?</description>
        <inlineHelpText>What is the type of relationship this agency has to this permitting process?</inlineHelpText>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cooperating</fullName>
                </value>
                <value>
                    <fullName>Participating</fullName>
                </value>
                <value>
                    <fullName>Proponent</fullName>
                </value>
                <value>
                    <fullName>Project Sponsor</fullName>
                    <!-- FRA: private entities or state agencies authorized to prepare EA/EIS under agency supervision per 42 U.S.C. 4336b -->
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_input_due_date__c</fullName>
        <description>Deadline by which this agency must submit their formal input (e.g., biological opinion, Section 106 letter, Water Quality Certification). Used by Priority 7 Interagency Coordination Hub.</description>
        <inlineHelpText>Deadline for this agency's formal input submission.</inlineHelpText>
        <label>Input Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_input_status__c</fullName>
        <description>Status of this agency's formal input submission. Used by Priority 7 Interagency Coordination Hub for task tracking.</description>
        <inlineHelpText>Submission status of this agency's formal input.</inlineHelpText>
        <label>Input Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Process Agency Relationship</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Process Agency Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Agency Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>